--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -1,1 +1,28 @@
+name: Docker Build & Publish
+
+on:
+  push:
+    branches:
+      - main  
+
+jobs:
+  build-and-publish:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and Push Docker Image
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        docker buildx create --use
+        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        docker buildx build --platform linux/amd64,linux/arm64 -t brunoacedero096/appdesafio8:latest -t brunoacedero096/appdesafio8:v1.0 .
+        docker push brunoacedero096/appdesafio8:latest
 
